Mapeando a exceção de validação Não listado
